[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thesma-mcp"
version = "0.1.0"
description = "MCP server for SEC EDGAR financial data — give your AI assistant access to company financials, ratios, insider trades, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["mcp", "sec", "edgar", "financial-data", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0,<2.0",
    "thesma>=0.9",
]

[project.urls]
Homepage = "https://thesma.dev"
Documentation = "https://docs.thesma.dev"
Repository = "https://github.com/thesma-dev/thesma-mcp"
Issues = "https://github.com/thesma-dev/thesma-mcp/issues"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
]

[project.scripts]
thesma-mcp = "thesma_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["mcp.*", "thesma.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
